--- a/Starter_Code/Crypto_Clustering.ipynb
+++ b/Starter_Code/Crypto_Clustering.ipynb
@@ -411,16 +411,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the `StandardScaler()` module from scikit-learn to normalize the data from the CSV file\n"
+    "# Use the `StandardScaler()` module from scikit-learn to normalize the data from the CSV file\n",
+    "scaler = StandardScaler()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -552,22 +553,24 @@
        "bitcoin-cash                   -0.270317  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a DataFrame with the scaled data\n",
-    "\n",
+    "scaled_data = scaler.fit_transform(market_data_df)\n",
+    "scaled_data_df = pd.DataFrame(scaled_data, \\\n",
+    "    columns=market_data_df.columns, index=market_data_df.index)\n",
     "\n",
     "# Copy the crypto names from the original data\n",
+    "# Set the coin_id column as index\n",
+    "crypto_names = market_data_df['name'] \\\n",
+    "    if 'name' in market_data_df.columns else None\n",
     "\n",
-    "\n",
-    "# Set the coinid column as index\n",
-    "\n",
-    "\n",
-    "# Display sample data\n"
+    "# Display sample data\n",
+    "scaled_data_df.head()\n"
    ]
   },
   {
@@ -1516,7 +1519,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dev",
    "language": "python",
    "name": "python3"
   },
@@ -1530,15 +1533,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.14"
   },
   "nteract": {
    "version": "0.28.0"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
-   }
   }
  },
  "nbformat": 4,
